...
            MaterialPageRoute(
              builder: (context) => const EditProfileScreen(),
            ),
          );
        },
        icon: const Icon(Icons.edit),
        label: const Text('Edit Profil'),
        style: ElevatedButton.styleFrom(
          padding: const EdgeInsets.symmetric(vertical: 16),
        ),
      ),
    );
  }
...
